[package]
name = "genius-crawl"
version = "0.1.0"
authors = ["banana <jgjin@umich.edu>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3"
csv = "1.0"
lazy_static = "1.3.0"
log = "0.4"
indicatif = "0.11"
num_cpus = "1.0"
pretty_env_logger = "0.3"
regex = "1.1.5"
reqwest = "0.9.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
url = "1.7"